# ChangeLog for media-plugins/gst-plugins-ogg
# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-plugins/gst-plugins-ogg/ChangeLog,v 1.26 2005/01/12 17:04:52 gmsoft Exp $

  12 Jan 2005; Guy Martin <gmsoft@gentoo.org> gst-plugins-ogg-0.8.5.ebuild:
  Stable on hppa.

*gst-plugins-ogg-0.8.7 (05 Jan 2005)

  29 Dec 2004; Ciaran McCreesh <ciaranm@gentoo.org> :
  Change encoding to UTF-8 for GLEP 31 compliance

  16 Dec 2004; Dylan Carlson <absinthe@gentoo.org>
  gst-plugins-ogg-0.8.5.ebuild:
  Stable on amd64.

  28 Nov 2004; Joseph Jezak <josejx@gentoo.org>
  gst-plugins-ogg-0.8.5.ebuild:
  Marked ppc stable.

  15 Nov 2004; Bryan Østergaard <kloeri@gentoo.org>
  gst-plugins-ogg-0.8.5.ebuild:
  Stable on alpha.

*gst-plugins-ogg-0.8.5 (12 Nov 2004)

  12 Nov 2004; Gustavo Zacarias <gustavoz@gentoo.org>
  gst-plugins-ogg-0.8.5.ebuild:
  Stable on sparc

*gst-plugins-ogg-0.8.3 (22 Oct 2004)

  22 Aug 2004; Bryan Østergaard <kloeri@gentoo.org>
  gst-plugins-ogg-0.8.2.ebuild:
  Stable on alpha.

*gst-plugins-ogg-0.8.3 (18 Aug 2004)

  18 Aug 2004; foser <foser@gentoo.org> gst-plugins-ogg-0.8.3.ebuild :
  New release

  05 Aug 2004; Gustavo Zacarias <gustavoz@gentoo.org>
  gst-plugins-ogg-0.8.2.ebuild:
  Stable on sparc

  05 Aug 2004; Guy Martin <gmsoft@gentoo.org> gst-plugins-ogg-0.8.2.ebuild:
  Stable on hppa.

  01 Aug 2004; <spider@gentoo.org> gst-plugins-ogg-0.8.2.ebuild:
  stable on x86

  04 Jul 2004; Bryan Østergaard <kloeri@gentoo.org>
  gst-plugins-ogg-0.8.1.ebuild:
  Stable on alpha.

*gst-plugins-ogg-0.8.2 (29 Jun 2004)

  29 Jun 2004; foser <foser@gentoo.org> gst-plugins-ogg-0.8.2.ebuild :
  New release

  04 Jun 2004; Stephen P. Becker <geoman@gentoo.org>
  gst-plugins-ogg-0.8.1.ebuild:
  Stable on mips.

  26 May 2004; Guy Martin <gmsoft@gentoo.org> gst-plugins-ogg-0.8.1.ebuild:
  Marked stable on hppa.

  02 May 2004; Stephen P. Becker <geoman@gentoo.org>
  gst-plugins-ogg-0.8.0.ebuild: